--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
   <div class="row">
     <div class="top col-sm-6 col-xs-12" style="padding-right: 50px; padding-bottom: 0px;">
       <h2 class="text-center">OUR MISSION</h2>
-      <h4><blockquote style="font-size:20px;">Our mission is to help our clients achieve optimal results from their investment and obtain substantial improvement in their performance by building a great company that attracts, grows and retains exceptional people.</h4></blockquote><br>
+      <h4><blockquote style="font-size:20px;">Our mission is to help our clients achieve NEW HEIGHT from their investment and obtain substantial improvement in their performance by building a great company that attracts, grows and retains exceptional people.</h4></blockquote><br>
     </div>
     <div class="top col-sm-6 col-xs-12" style="padding-right: 50px; padding-bottom: 0px;">
       <div class="embed-responsive embed-responsive-16by9">
